@@ -1,4 +1,5 @@
-#  Logging level
+# Default Solr log4j config
+# rootLogger log level may be programmatically overridden by -Dsolr.log.level
 solr.log=logs
 log4j.rootLogger=INFO, file, CONSOLE
 
@@ -19,6 +20,8 @@ log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p (%
 
 log4j.logger.org.apache.zookeeper=WARN
 log4j.logger.org.apache.hadoop=WARN
+log4j.logger.org.eclipse.jetty=WARN
+log4j.logger.org.eclipse.jetty.server=INFO
 
 # set to INFO to enable infostream log messages
 log4j.logger.org.apache.solr.update.LoggingInfoStream=OFF
